--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 <main class="container">
     <div class="card-wrapper">
         <div class="content">
-            <h3>Ariba M.</h3>
+            <h3>Toothless Grin.</h3>
             <p>Frontend Developer</p>
             <a href="#">Read More</a>
-            <!-- <button>Neon Button</button> -->
+            <!-- <button>Trans Button</button> -->
         </div>
     </div>
 </main>
